--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   smooth_page_indicator: ^0.2.0
   fluttertoast: ^8.0.3
   carousel_slider: ^3.0.0
+  desktop_window:
+  responsive_builder:
 
 dev_dependencies:
   flutter_test:
